--- a/okHttp/app/src/main/res/layout/activity_main.xml
+++ b/okHttp/app/src/main/res/layout/activity_main.xml
@@ -24,12 +24,38 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
+    <TextView
+        android:text="上传"
+        android:id="@+id/tv_upload"
+        android:layout_marginTop="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        android:text="下载一个app"
+        android:id="@+id/tv_download"
+        android:layout_marginTop="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        android:text="下载一个app,you进度显示"
+        android:id="@+id/tv_download_with_progress"
+        android:layout_marginTop="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
     <LinearLayout
         android:layout_marginTop="30dp"
         android:orientation="vertical"
         android:gravity="center_vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/tv_download_progress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
